new HTML element added

--- a/SampleWebPage.html
+++ b/SampleWebPage.html
@@ -10,7 +10,7 @@
   <h1>My first heading</h1>
   <p>My <strong>first</strong> paragraph</p>
   <h2>My second heading</h2>
-  <p>My <em>second</em> paragraph</p>
+  <p>My <em>second</em> paragraph.This is a <sub>sub</sub> text.</p>
   <h3>My third heading</h3>
   <p>My <small>third</small> paragraph. This is the text I want to <del>delete</del></p>
 </body>
